# hetzner-dns

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
hdns/: __main__.py  cli.py  client.py  utils.py
