[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hdns"
version = "0.1.0"
description = "CLI for the Hetzner DNS API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.7",
]

[project.scripts]
hdns = "hdns.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hdns*"]
